--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   geolocator: ^14.0.0
   shared_preferences: ^2.5.3
   flutter_local_notifications: ^19.2.1
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   flutter_test:
