--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   shared_preferences: ^2.5.3
   flutter_local_notifications: ^19.2.1
   url_launcher: ^6.3.1
+  get: ^4.7.2
 
 dev_dependencies:
   flutter_test:
