--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_local_notifications: ^19.2.1
   url_launcher: ^6.3.1
   get: ^4.7.2
+  timeago: ^3.7.1
 
 dev_dependencies:
   flutter_test:
