Added profile screen and fixed navbar bugs

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   url_launcher: ^6.3.1
   get: ^4.7.2
   timeago: ^3.7.1
+  http: ^1.4.0
+  flutter_typeahead: ^5.2.0
 
 dev_dependencies:
   flutter_test:
