--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   timeago: ^3.7.1
   http: ^1.4.0
   flutter_typeahead: ^5.2.0
+  firebase_messaging: ^15.2.6
+  firebase_core: ^3.13.1
 
 dev_dependencies:
   flutter_test:
