--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   flutter_typeahead: ^5.2.0
   firebase_messaging: ^15.2.6
   firebase_core: ^3.13.1
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
